--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,5 +14,8 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
+  },
+  "ArcticTypescript": {
+    "node_path": "/usr/bin/node"
   }
 }
